--- a/src/app/equipment/equipment.component.html
+++ b/src/app/equipment/equipment.component.html
@@ -16,7 +16,7 @@
         <li *ngFor="let equipment of cargoHold">{{equipment.name}}</li>
     </ol>
     <p>Mass in Hold: {{cargoMass}} kg</p>
-    <p>Mass Budget Remaining: {{<!-- Calculate mass remaining here. -->}} kg</p>
-    <!-- Add the "Empty Hold" button here. -->
+    <p [class.nearMaxMass]="cargoMass > maximumAllowedMass - 200">Mass Budget Remaining: {{<!-- Calculate mass remaining here. -->}} kg</p>
+    <button (click)="emptyHold()">Empty Hold</button>
 </div>
 
